# AllPass

./: .gitignore  CMakeLists.txt  README.md  constants.h  icons.qrc  images.qrc  key.h  main.cpp  passitemdelegate.cpp  passitemdelegate.h  storagemanager.cpp  storagemanager.h  stream_cipher.h  utils.h  widget.cpp  widget.h  widget.ui  worker.cpp  worker.h
AppCore/: main.cpp  passitemdelegate.cpp  passitemdelegate.h  storagemanager.cpp  storagemanager.h  widget.cpp  widget.h  widget.ui  worker.cpp  worker.h
lfsr_hash/: io_utils.h  lfsr.h  lfsr_hash.h
utils/: constants.h  stream_cipher.h  utils.h
utils/lfsr/: lfsr.h  lfsr_hash.h
